# tiny-ld

./: CMakeLists.txt  Makefile  README.md  common.h  elf.c  elf.h  tiny-ld.udb
common/: common.h
elf_prase/: CMakeLists.txt  main.c  test_elf_prase.c
elf_prase/include/: common.h  elf_header.h  elf_prase.h
elf_prase/src/: common.c  elf_header.c  elf_prase.c
src/elf_prase/: elf_header.h  elf_prase.c  elf_prase.h
src/elf_prase/plate/arm_v7/: __elf_header.c  __elf_header.h  _elf_prase.c  _elf_prase.h  elf_header.c  elf_prase.c
study/: CMakeLists.txt  relocations.cc  sections.cc  segments.cc  symbols.cc
test/: test_elf_prase.c
