CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(TINY-LD)

#BUILD_OPTION test | src | so | a
#TEST_NAME elf_prase
#PLATFORM arm_v7
#CROSS arm-linux-gnueabihf

SET(BUILD_OPTION test)
SET(TEST_NAME elf_prase)
SET(PLATFORM arm_v7)
SET(CROSS arm-linux-gnueabihf)

MESSAGE("BUILD_OPTION:${BUILD_OPTION}")
MESSAGE("TEST_NAME:${TEST_NAME}")
MESSAGE("PLATFORM:${PLATFORM}")
MESSAGE("CROSS:${CROSS}")

SET(CMAKE_C_COMPILER ${CROSS}-gcc)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")

SET(COMMON "${CMAKE_SOURCE_DIR}/common")
SET(SRC "${CMAKE_SOURCE_DIR}/src")
SET(SRC_ELF_PRASE "${SRC}/elf_prase")
SET(SRC_ELF_PRASE_PLATE "${SRC_ELF_PRASE}/plate/${PLATFORM}")

INCLUDE_DIRECTORIES(${COMMON})
INCLUDE_DIRECTORIES(${SRC_ELF_PRASE})
INCLUDE_DIRECTORIES(${SRC_ELF_PRASE_PLATE})

AUX_SOURCE_DIRECTORY(${COMMON} SOURCE_LIST)
AUX_SOURCE_DIRECTORY(${SRC_ELF_PRASE} SOURCE_LIST)
AUX_SOURCE_DIRECTORY(${SRC_ELF_PRASE_PLATE} SOURCE_LIST)

SET(PRO_TEST "${CMAKE_SOURCE_DIR}/test")
if(BUILD_OPTION MATCHES "test")
	SET(SOURCE_LIST ${SOURCE_LIST} ${PRO_TEST}/test_${TEST_NAME}.c)
endif()

ADD_EXECUTABLE(main ${SOURCE_LIST})
TARGET_LINK_LIBRARIES(main)
